# OS_2025

./: CMakeLists.txt  README.md  build.sh  config.txt
Config/: game_config.h  semaphores_manager.h
Conn/: conn.h  conn_fifo.cpp  conn_mq.cpp  conn_shm.cpp
client/: client.cpp  goat_client.cpp  goat_client.h
host/: host.cpp  wolf_server.cpp  wolf_server.h
src/: config.cpp  config.h  daemon.cpp  daemon.h  main.cpp  utils.h  worker.cpp  worker.h
